Compiler/tests/bad/Variables/02_variable.rs
fn main(){
    let x : i32 = 23;
    x = x + 32;
}
